<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.navigation.Signup">
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">

            <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="invisible" />

            <TextView
                    android:id="@+id/create_new_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/create_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36sp"
                    app:fontFamily="sans-serif-smallcaps" />

            <EditText
                    android:id="@+id/email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="8dp"
                    android:autofillHints="username"
                    android:background="@drawable/rounded_et"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/mail_hint"
                    android:inputType="textEmailAddress" />

            <EditText
                    android:id="@+id/pass_reg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:autofillHints="password"
                    android:background="@drawable/rounded_et"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword" />

            <EditText
                    android:id="@+id/confirm_pass_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/rounded_et"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword" />

            <Button
                    android:id="@+id/create_acc_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_round_color"
                    android:text="@string/create_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>