<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.navigation.LoginFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">

            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="invisible" />

            <TextView
                    android:id="@+id/Welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/welcome"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36sp"
                    app:fontFamily="sans-serif-smallcaps" />

            <EditText
                    android:id="@+id/LoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="username"
                    android:background="@drawable/rounded_et"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/mail_hint"
                    android:inputType="textEmailAddress" />

            <EditText
                    android:id="@+id/LoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="50dp"
                    android:autofillHints="password"
                    android:background="@drawable/rounded_et"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword" />

            <Button
                    android:id="@+id/Login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_round"
                    android:text="@string/login_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/new_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/btn_round_color"
                    android:text="@string/new_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>