<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".NewPost">


            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/new_post_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                   />

            <ProgressBar
                    android:id="@+id/progressBar4"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="invisible" />

            <ImageView
                    android:id="@+id/new_post_img"
                    android:layout_width="380dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_photo_img" />

            <EditText
                    android:id="@+id/new_post_text"
                    android:layout_width="350dp"
                    android:layout_height="125dp"

                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"

                    android:background="@drawable/rounded_et"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/information_text"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            <Button
                    android:id="@+id/new_post_save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"

                    android:background="@drawable/btn_round"
                    android:text="@string/post_btn"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/new_post_cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"


                    android:background="@drawable/btn_round_color"
                    android:text="@string/cancel_btn"
                    android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>